@@ -111,22 +111,10 @@ class Commit
     description.present?
   end
 
-  # Regular expression that identifies commit message clauses that trigger issue closing.
-  def issue_closing_regex
-    @issue_closing_regex ||= Regexp.new(Gitlab.config.gitlab.issue_closing_pattern)
-  end
-
   # Discover issues should be closed when this commit is pushed to a project's
   # default branch.
   def closes_issues project
-    md = issue_closing_regex.match(safe_message)
-    if md
-      extractor = Gitlab::ReferenceExtractor.new
-      extractor.analyze(md[0])
-      extractor.issues_for(project)
-    else
-      []
-    end
+    Gitlab::ClosingIssueExtractor.closed_by_message_in_project(safe_message, project)
   end
 
   # Mentionable override.
